services/fd-tagging-tool/src/test/resources/invalid/TwoSameTags/TwoSameTags.tg
package invalid.TwoSameTags;

tagging TwoSameTags {
    feature invalid.TwoSameTags.TwoSameTags.Car contains invalid.TwoSameTags.Source;
    feature invalid.TwoSameTags.TwoSameTags.Car contains invalid.TwoSameTags.Sink;
}